step2 피드백 반영 - 무료강의 판매가 0처리, 변수명수정